--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = flutter_qjs_example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = soko.ekibun.flutterQjsExample
+PRODUCT_BUNDLE_IDENTIFIER = com.example.flutterQjsExample
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2020 soko.ekibun. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
